<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HangMan">

    <ImageView
        android:id="@+id/hangManImg"
        android:layout_width="411dp"
        android:layout_height="315dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hangman_lvl0" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="0.448"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonB"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:text="@string/b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toEndOf="@+id/buttonA"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="0.448"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonC"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:text="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonB"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="0.448"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonD"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:text="@string/d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonC"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="0.448"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonE"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonD"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="0.448"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonF"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonE"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="0.448"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonG"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/g"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonF"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="0.448"
        android:onClick="touchLetter"/>
    <Button
        android:id="@+id/buttonH"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonG"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="0.448"
        android:onClick="touchLetter"/>
    <Button
        android:id="@+id/buttonI"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/i"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonH"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="0.448"
        android:onClick="touchLetter"/>
    <Button
        android:id="@+id/buttonJ"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/j"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonI"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="0.448"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonK"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/k"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonB"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonL"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonK"
        app:layout_constraintTop_toTopOf="@+id/buttonC"
        app:layout_constraintVertical_bias="0.245"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonM"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonL"
        app:layout_constraintTop_toTopOf="@+id/buttonD"
        app:layout_constraintVertical_bias="0.245"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonN"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonM"
        app:layout_constraintTop_toTopOf="@+id/buttonE"
        app:layout_constraintVertical_bias="0.245"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonO"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/o"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonN"
        app:layout_constraintTop_toTopOf="@+id/buttonF"
        app:layout_constraintVertical_bias="0.245"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonP"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonO"
        app:layout_constraintTop_toTopOf="@+id/buttonG"
        app:layout_constraintVertical_bias="0.245"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonQ"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/q"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonP"
        app:layout_constraintTop_toTopOf="@+id/buttonH"
        app:layout_constraintVertical_bias="0.245"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonR"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/r"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonQ"
        app:layout_constraintTop_toTopOf="@+id/buttonI"
        app:layout_constraintVertical_bias="0.245"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonS"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/s"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.332"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonM"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonT"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="@id/buttonS"
        app:layout_constraintTop_toBottomOf="@+id/buttonN"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="touchLetter" />

    <Button
        android:id="@+id/buttonU"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/u"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@id/buttonT"
        app:layout_constraintTop_toBottomOf="@+id/buttonO"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonV"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/v"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@id/buttonU"
        app:layout_constraintTop_toBottomOf="@+id/buttonP"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonW"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:onClick="touchLetter"
        android:text="@string/w"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.332"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonS"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonX"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="@id/buttonW"
        app:layout_constraintTop_toBottomOf="@+id/buttonT"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonY"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/y"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@id/buttonX"
        app:layout_constraintTop_toBottomOf="@+id/buttonU"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="touchLetter"/>

    <Button
        android:id="@+id/buttonZ"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:text="@string/z"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@id/buttonY"
        app:layout_constraintTop_toBottomOf="@+id/buttonV"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="touchLetter"/>

    <Spinner
        android:id="@+id/categorySpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/hangmanList"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/hangManImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msgBox"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginTop="104dp"
        android:gravity="center"
        android:text="Tarane"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dashBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Tarane"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/msgBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangManImg"
        app:layout_constraintVertical_bias="0.508" />


</androidx.constraintlayout.widget.ConstraintLayout>