<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReactionTap">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="182dp"
        android:layout_height="59dp"
        android:gravity="center"
        android:text="@string/TitleForTapRec"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/description"
        android:layout_width="301dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/DescriptionTap"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <Button
        android:id="@+id/tapButton"
        android:layout_width="214dp"
        android:layout_height="108dp"
        android:layout_marginTop="172dp"
        android:background="@color/lightRed"
        android:text="@string/tapButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/reactionStart"
        android:layout_width="139dp"
        android:layout_height="74dp"
        android:layout_marginTop="140dp"
        android:background="@color/Press5"
        android:text="@string/readyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapButton"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/reactionTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember to romove"
        app:layout_constraintBottom_toTopOf="@+id/tapButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />


</androidx.constraintlayout.widget.ConstraintLayout>